--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>💰 Valyuta → So‘m Konvertori | AsrorCodeX</title>
+  <title>💰 Valyuta → So‘m Konvertori | umrbekCodeX</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -37,4 +37,5 @@
 
   <script src="script.js" defer></script>
 </body>
+
 </html>
