--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main class="app">
-    <h1 class="title">💰 Valyuta → So‘m Konvertori | AsrorCodeX</h1>
+    <h1 class="title">💰 Valyuta → So‘m Konvertori | umrbekCodeX</h1>
 
     <section class="panel">
       <div class="field">
@@ -35,7 +35,8 @@
     </footer>
   </main>
 
-  <script src="script.js" defer></script>
+  <script src="script.j" defer></script>
 </body>
 
 </html>
+
